# mastering-amazon-bedrock-agentcore

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
capstone_project/: README.md
capstone_project/backend/: auth_utils.py  browser_tools_setup.py  code_interpreter_setup.py  cognito_config.py  requirements.txt
capstone_project/backend/gateway/: gateway_setup.py  requirements.txt  setup.sh  test_gateway.py
capstone_project/backend/gateway/openapi_specs/: aviationstack.json  exchangerate.json  openweathermap.json
capstone_project/backend/identity/runtime/: .bedrock_agentcore.yaml  Dockerfile  oauth2_callback_server.py  requirements.txt  travel_agent_google_drive.py
capstone_project/backend/memory/: memory_setup.py
capstone_project/backend/runtime/final_agent/: identity_helper.py  requirements.txt  unified_travel_agent.py
capstone_project/backend/runtime/simple_agent/: .bedrock_agentcore.yaml  Dockerfile  requirements.txt  travel_agent.py
capstone_project/notebooks/: 01-foundation.ipynb  02-runtime-setup.ipynb  03-gateway-integration.ipynb  04-memory-implementation.ipynb  05-identity-oauth.ipynb  06-code-interpreter.ipynb  07-browser-tools.ipynb  08-final-integration.ipynb
misc/: mcp.json
tests/: README.md  api_direct_test.py  pyproject.toml
